--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
+aenum==3.1.15
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.9
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+asgiref==3.8.1
+attrs==24.2.0
 blinker==1.8.2
+cachetools==5.5.0
 certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
+dataclasses-json==0.6.7
+deepgram-sdk==2.12.0
+deprecation==2.1.0
 distro==1.9.0
+Django==5.1.3
 Flask==3.0.3
+frozenlist==1.5.0
+google-api-core==2.23.0
+google-auth==2.36.0
+google-cloud-texttospeech==2.21.1
+googleapis-common-protos==1.66.0
+grpcio==1.68.1
+grpcio-status==1.68.1
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
@@ -13,11 +33,27 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jiter==0.7.0
 MarkupSafe==3.0.2
+marshmallow==3.23.1
+multidict==6.1.0
+mypy-extensions==1.0.0
 openai==1.53.0
+packaging==24.2
+propcache==0.2.1
+proto-plus==1.25.0
+protobuf==5.29.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
+requests==2.32.3
+rsa==4.9
 sniffio==1.3.1
+sqlparse==0.5.2
 tqdm==4.66.6
+typing-inspect==0.9.0
 typing_extensions==4.12.2
+urllib3==2.2.3
+websockets==13.1
 Werkzeug==3.1.1
+yarl==1.18.3
