--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ defusedxml==0.8.0rc2
 Deprecated==1.2.17
 deprecation==2.1.0
 distro==1.9.0
+dj-database-url==2.1.0
 Django==5.1.3
 django-environ==0.12.0
 django-extensions==3.2.3
@@ -44,6 +45,7 @@ groq==0.18.0
 grpcio==1.68.1
 grpcio-status==1.68.1
 gTTS==2.5.4
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.28.1
@@ -65,6 +67,7 @@ packaging==24.2
 propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.29.1
+psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycares==4.5.0
