fixed static files

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,8 @@ steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/techtonic-app', '.']
+    env:
+      - 'ENVIRONMENT=production'
 
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
